quick-fix: set correct image tag

--- a/cli/services/connect-worker-main/docker-compose.yml
+++ b/cli/services/connect-worker-main/docker-compose.yml
@@ -16,7 +16,7 @@
 version: "2"
 services:
   connect-worker-main:
-    image: ${SP_DOCKER_REGISTRY}streampipes-connect-worker:${SP_BACKEND_VERSION}
+    image: ${SP_DOCKER_REGISTRY}connect-worker:${SP_BACKEND_VERSION}
     depends_on:
       - consul
       - couchdb
