Dashboard items can be resized

--- a/ui/package.json
+++ b/ui/package.json
@@ -29,7 +29,7 @@
     "@angular/upgrade": "7.2.9",
     "@ngui/datetime-picker": "0.16.2",
     "@stomp/ng2-stompjs": "^7.2.0",
-    "@swimlane/ngx-charts": "13.0.2",
+    "@swimlane/ngx-charts": "^13.0.2",
     "@uirouter/angular-hybrid": "7.0.0",
     "angular": "1.7.7",
     "angular-animate": "1.7.7",
