--- a/streampipes-pipeline-elements-all-jvm/pom.xml
+++ b/streampipes-pipeline-elements-all-jvm/pom.xml
@@ -76,6 +76,12 @@
             <version>0.65.1-SNAPSHOT</version>
             <classifier>embed</classifier>
         </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-processors-enricher-jvm</artifactId>
+            <version>0.65.1-SNAPSHOT</version>
+            <classifier>embed</classifier>
+        </dependency>
     </dependencies>
 
     <build>
