Modify WS proxy address

--- a/ui/nginx_config/default.conf
+++ b/ui/nginx_config/default.conf
@@ -121,7 +121,7 @@ server {
 
   # Websockets
 
-  location /streampipes/ws/ {
+  location /streampipes/ws {
     set $upstream activemq:61614;
 
     proxy_set_header Upgrade $http_upgrade;
