--- a/ui/package.json
+++ b/ui/package.json
@@ -16,13 +16,13 @@
   },
   "dependencies": {
     "@angular/animations": "7.2.9",
-    "@angular/cdk": "^7.3.7",
+    "@angular/cdk": "7.3.7",
     "@angular/common": "7.2.9",
     "@angular/compiler": "7.2.9",
     "@angular/core": "7.2.9",
     "@angular/flex-layout": "7.0.0-beta.23",
     "@angular/forms": "7.2.9",
-    "@angular/material": "^7.3.7",
+    "@angular/material": "7.3.7",
     "@angular/platform-browser": "7.2.9",
     "@angular/platform-browser-dynamic": "7.2.9",
     "@angular/router": "7.2.9",
