STREAMPIPES-53: Upgrade Angular version to 8

--- a/ui/package.json
+++ b/ui/package.json
@@ -15,18 +15,18 @@
     "lint": "tslint -c tslint.json 'src/**/*.ts*"
   },
   "dependencies": {
-    "@angular/animations": "7.2.9",
+    "@angular/animations": "8.2.14",
     "@angular/cdk": "7.3.7",
-    "@angular/common": "7.2.9",
-    "@angular/compiler": "7.2.9",
-    "@angular/core": "7.2.9",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/core": "8.2.14",
     "@angular/flex-layout": "7.0.0-beta.23",
-    "@angular/forms": "7.2.9",
+    "@angular/forms": "8.2.14",
     "@angular/material": "7.3.7",
-    "@angular/platform-browser": "7.2.9",
-    "@angular/platform-browser-dynamic": "7.2.9",
-    "@angular/router": "7.2.9",
-    "@angular/upgrade": "7.2.9",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/router": "8.2.14",
+    "@angular/upgrade": "8.2.14",
     "@ngui/datetime-picker": "0.16.2",
     "@stomp/ng2-stompjs": "^7.2.0",
     "@swimlane/ngx-charts": "^13.0.2",
@@ -86,18 +86,18 @@
     "rxjs-compat": "^6.3.3",
     "shepherd.js": "2.4.0",
     "slick-carousel": "1.6.0",
-    "zone.js": "^0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular/cli": "7.3.6",
-    "@angular/compiler-cli": "7.2.9",
-    "@ngtools/webpack": "7.3.6",
+    "@angular/cli": "8.3.25",
+    "@angular/compiler-cli": "8.2.14",
+    "@ngtools/webpack": "8.3.25",
     "@types/angular": "^1.6.43",
     "@types/jasmine": "~2.8.3",
     "@types/jqueryui": "^1.12.7",
     "@types/node": "11.11.3",
     "@types/rx": "^4.1.1",
-    "codelyzer": "^4.1.0",
+    "codelyzer": "^5.0.1",
     "copy-webpack-plugin": "^5.0.2",
     "compression-webpack-plugin": "^3.0.0",
     "css-loader": "^0.28.11",
@@ -123,7 +123,7 @@
     "to-string-loader": "^1.1.5",
     "tslint": "^5.15.0",
     "tslint-config-prettier": "^1.15.0",
-    "typescript": "3.2.4",
+    "typescript": "3.5.3",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
