STREAMPIPES-53: Update UI to Angular 9, clean up build system and refactor old AngularJS code to support build optimization

--- a/ui/deployment/dev/config.yml
+++ b/ui/deployment/dev/config.yml
@@ -21,7 +21,7 @@ modules:
   - spEditor
   - spPipelines
   - spConnect
-  - spDashboard
+#  - spDashboard
   - spAppOverview
   - spAdd
   - spMyElements
