--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apache-streampipes",
-  "version": "0.0.1",
+  "version": "0.65.1-SNAPSHOT",
   "description": "Apache StreamPipes (incubating) user interface",
   "homepage": "http://streampipes.apache.org",
   "repository": {
@@ -8,43 +8,49 @@
     "url": "https://github.com/apache/incubator-streampipes"
   },
   "scripts": {
-    "start": "node ./deployment/prebuild.js && webpack-dev-server -d --env=dev",
+    "start": "node ./deployment/prebuild.js && ng serve",
+    "start-webpack": "node ./deployment/prebuild.js && webpack-dev-server -d --env=dev",
     "watchtest": "node ./deployment/prebuild.js && karma start ./karma.conf.js --no-auto-watch --single-run",
     "test": "node ./deployment/prebuild.js && karma start ./karma.conf.js",
-    "build": "node ./deployment/prebuild.js && webpack --display-modules --progress --env=prod",
+    "build": "node ./deployment/prebuild.js && set NODE_OPTIONS=--max-old-space-size=10192 && ng build --prod --stats-json",
+    "build-webpack": "node ./deployment/prebuild.js && webpack --display-modules --progress --env=prod",
     "lint": "tslint -c tslint.json 'src/**/*.ts*"
   },
   "dependencies": {
-    "@angular/animations": "8.2.14",
-    "@angular/cdk": "7.3.7",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/flex-layout": "7.0.0-beta.23",
-    "@angular/forms": "8.2.14",
-    "@angular/material": "7.3.7",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@angular/router": "8.2.14",
-    "@angular/upgrade": "8.2.14",
+    "@angular/animations": "9.0.1",
+    "@angular/cdk": "9.0.0",
+    "@angular/common": "9.0.1",
+    "@angular/compiler": "9.0.1",
+    "@angular/core": "9.0.1",
+    "@angular/flex-layout": "9.0.0-beta.29",
+    "@angular/forms": "9.0.1",
+    "@angular/material": "9.0.0",
+    "@angular/platform-browser": "9.0.1",
+    "@angular/platform-browser-dynamic": "9.0.1",
+    "@angular/router": "9.0.1",
+    "@angular/upgrade": "9.0.1",
     "@ngui/datetime-picker": "0.16.2",
     "@stomp/ng2-stompjs": "^7.2.0",
     "@swimlane/ngx-charts": "^13.0.2",
-    "@uirouter/angular-hybrid": "7.0.0",
+    "@uirouter/angular-hybrid": "10.0.1",
+    "@uirouter/core": "6.0.4",
+    "@uirouter/angular": "^6.0.1",
+    "@uirouter/angularjs":  "^1.0.25",
+    "@uirouter/rx": "^0.6.5",
     "angular": "1.7.7",
     "angular-animate": "1.7.7",
     "angular-aria": "1.7.7",
     "angular-clipboard": "1.4.2",
     "angular-cookies": "1.7.7",
     "angular-datatables": "0.6.2",
-    "angular-gridster2": "7.2.0",
+    "angular-gridster2": "8.3.0",
     "angular-loading-bar": "0.8.0",
     "angular-markdown-directive": "0.3.1",
     "angular-material": "1.1.18",
     "angular-material-icons": "0.4.0",
     "angular-messages": "1.7.7",
     "angular-notification-icons": "0.4.4",
-    "angular-plotly.js": "1.3.2",
+    "angular-plotly.js": "1.5.0",
     "angular-resource": "1.7.7",
     "angular-route": "1.7.7",
     "angular-rt-popup": "1.0.6",
@@ -72,7 +78,7 @@
     "lodash": "3.10.1",
     "ng-dynamic-component": "4.0.3",
     "ng-file-upload": "9.0.13",
-    "ng-pick-datetime": "7.0.0",
+    "@danielmoncada/angular-datetime-picker": "^9.2.0",
     "ng-prettyjson": "0.1.8",
     "ng-showdown": "^1.1.0",
     "ng-simple-slideshow": "^1.2.9",
@@ -80,24 +86,26 @@
     "ng2-dragula": "^1.5.0",
     "ngmap": "1.18.0",
     "ngx-color-picker": "^7.5.0",
-    "plotly.js": "1.49.3",
     "prismjs": "^1.16.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
     "shepherd.js": "2.4.0",
     "slick-carousel": "1.6.0",
-    "zone.js": "~0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular/cli": "8.3.25",
-    "@angular/compiler-cli": "8.2.14",
-    "@ngtools/webpack": "8.3.25",
+    "@angular-builders/custom-webpack": "^8.4.1",
+    "@angular-devkit/build-angular": "~0.900.2",
+    "@angular/cli": "9.0.2",
+    "@angular/compiler-cli": "9.0.1",
+    "@ngtools/webpack": "9.0.2",
     "@types/angular": "^1.6.43",
     "@types/jasmine": "~2.8.3",
     "@types/jqueryui": "^1.12.7",
-    "@types/node": "11.11.3",
+    "@types/node": "^12.11.1",
     "@types/rx": "^4.1.1",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "^5.1.2",
     "copy-webpack-plugin": "^5.0.2",
     "compression-webpack-plugin": "^3.0.0",
     "css-loader": "^0.28.11",
@@ -113,7 +121,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-verbose-reporter": "0.0.6",
-    "mini-css-extract-plugin": "^0.5.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "mustache": "^2.3.0",
     "node-sass": "^4.8.3",
     "prettier": "1.14.2",
@@ -123,7 +131,7 @@
     "to-string-loader": "^1.1.5",
     "tslint": "^5.15.0",
     "tslint-config-prettier": "^1.15.0",
-    "typescript": "3.5.3",
+    "typescript": "3.7.5",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
