STREAMPIPES-53: Use PlotlyViaWindowModule

--- a/ui/angular.json
+++ b/ui/angular.json
@@ -23,7 +23,9 @@
             "styles": [
               "src/scss/main.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/plotly.js/dist/plotly.min.js"
+            ]
           },
           "configurations": {
             "production": {
