--- a/cli/services/sinks-internal-jvm/docker-compose.yml
+++ b/cli/services/sinks-internal-jvm/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     extra_hosts:
       - host.docker.internal:${HOST_DOCKER_INTERNAL}
     volumes:
-      - influx:/sp_images
+      - sinks_internal:/sp_images
     networks:
       spnet:
 
