--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ variables:
   GIT_REPO_ORIGIN: $GIT_REPO_ORIGIN
   GIT_STRATEGY: clone
   DOCKER_CLI_EXPERIMENTAL: enabled
-  BASE_IMAGE_AMD: adoptopenjdk/openjdk8-openj9:alpine-slim
+  BASE_IMAGE_AMD64: adoptopenjdk/openjdk8-openj9:alpine-slim
   BASE_IMAGE_ARM32v7: arm32v7/openjdk:11-jre-slim
   BASE_IMAGE_ARM64v8: arm64v8/openjdk:11-jre-slim
   BASE_NGINX_AMD64: nginx
@@ -120,7 +120,7 @@ docker-ui:
     - docker build --pull --build-arg BASE_IMAGE=$BASE_NGINX_AMD64
       -t $IMAGE_NAME/ui:amd64 -t $IMAGE_NAME/ui:amd64-$MVN_VERSION
       -f ./ui/Dockerfile ./ui
-    # Build ARMv7
+    # Build ARM32v7, ARM64v8
     # Download qemu static and make it executable so it can be used during the docker build phase
     - wget https://github.com/multiarch/qemu-user-static/releases/download/v4.0.0/qemu-arm-static -P ./ui
     - wget https://github.com/multiarch/qemu-user-static/releases/download/v4.0.0/qemu-aarch64-static -P ./ui
@@ -128,11 +128,11 @@ docker-ui:
     - chmod 554 ./ui/qemu-aarch64-static
     - docker build --pull --build-arg BASE_IMAGE=$BASE_NGINX_ARM32v7 --build-arg QEMU=qemu-arm-static
       -t $IMAGE_NAME/ui:arm32v7 -t $IMAGE_NAME/ui:arm32v7-$MVN_VERSION
-      -f ./ui/Dockerfile.arm ./ui
+      -f ./ui/arm.Dockerfile ./ui
     - docker build --pull --build-arg BASE_IMAGE=$BASE_NGINX_ARM64v8 --build-arg QEMU=qemu-aarch64-static
       -t $IMAGE_NAME/ui:arm64v8 -t $IMAGE_NAME/ui:arm64v8-$MVN_VERSION
-      -f ./ui/Dockerfile.arm ./ui
-    # Push Docker images: AMD64, ARMv7, ARMv8
+      -f ./ui/aarch64.Dockerfile ./ui
+    # Push Docker images: AMD64, ARM32v7, ARM64v8
     - docker push $IMAGE_NAME/ui:amd64-$MVN_VERSION
     - docker push $IMAGE_NAME/ui:amd64
     - docker push $IMAGE_NAME/ui:arm32v7-$MVN_VERSION
@@ -148,48 +148,6 @@ docker-ui:
     - docker manifest annotate $IMAGE_NAME/ui:$MVN_VERSION $IMAGE_NAME/ui:arm64v8-$MVN_VERSION --os linux --arch arm64
     - docker manifest push $IMAGE_NAME/ui:$MVN_VERSION
 
-#    # Build AMD64
-#    - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_AMD
-#      -t $IMAGE_NAME/backend:amd64 -t $IMAGE_NAME/backend:amd64-$MVN_VERSION
-#      -t $HARBOR_IMAGE_NAME/backend:amd64 -t $HARBOR_IMAGE_NAME/backend:amd64-$MVN_VERSION
-#      -f ./streampipes-backend/Dockerfile ./streampipes-backend
-#    # Build ARMv7
-#    # Download qemu static and make it executable so it can be used during the docker build phase
-#    - wget https://github.com/multiarch/qemu-user-static/releases/download/v4.0.0/qemu-arm-static -P ./streampipes-backend
-#    - chmod 554 ./streampipes-backend/qemu-arm-static
-#    - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_ARM32v7
-#      -t $IMAGE_NAME/backend:arm32v7 -t $IMAGE_NAME/backend:arm32v7-$MVN_VERSION
-#      -t $HARBOR_IMAGE_NAME/backend:arm32v7 -t $HARBOR_IMAGE_NAME/backend:arm32v7-$MVN_VERSION
-#      -f ./streampipes-backend/Dockerfile.arm ./streampipes-backend
-#    - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_ARM64v8
-#      -t $IMAGE_NAME/backend:arm64v8 -t $IMAGE_NAME/backend:arm64v8-$MVN_VERSION
-#      -t $HARBOR_IMAGE_NAME/backend:arm64v8 -t $HARBOR_IMAGE_NAME/backend:arm64v8-$MVN_VERSION
-#      -f ./streampipes-backend/Dockerfile.arm ./streampipes-backend
-#    # Push Docker images
-#    # Push AMD64
-#    - docker push $IMAGE_NAME/backend:amd64-$MVN_VERSION
-#    - docker push $IMAGE_NAME/backend:amd64
-#    - docker push $HARBOR_IMAGE_NAME/backend:amd64-$MVN_VERSION
-#    - docker push $HARBOR_IMAGE_NAME/backend:amd64
-#    # Push ARMv7
-#    - docker push $IMAGE_NAME/backend:arm32v7-$MVN_VERSION
-#    - docker push $IMAGE_NAME/backend:arm32v7
-#    - docker push $HARBOR_IMAGE_NAME/backend:arm32v7-$MVN_VERSION
-#    - docker push $HARBOR_IMAGE_NAME/backend:arm32v7
-#    # Push ARMv8
-#    - docker push $IMAGE_NAME/backend:arm64v8-$MVN_VERSION
-#    - docker push $IMAGE_NAME/backend:arm64v8
-#    - docker push $HARBOR_IMAGE_NAME/backend:arm64v8-$MVN_VERSION
-#    - docker push $HARBOR_IMAGE_NAME/backend:arm64v8
-#    # Create Docker manifest
-#    - docker manifest create $IMAGE_NAME/backend:$MVN_VERSION
-#      $IMAGE_NAME/backend:amd64-$MVN_VERSION
-#      $IMAGE_NAME/backend:arm32v7-$MVN_VERSION
-#      $IMAGE_NAME/backend:arm64v8-$MVN_VERSION
-#    - docker manifest annotate $IMAGE_NAME/backend:$MVN_VERSION $IMAGE_NAME/backend:arm32v7-$MVN_VERSION --os linux --arch arm
-#    - docker manifest annotate $IMAGE_NAME/backend:$MVN_VERSION $IMAGE_NAME/backend:arm64v8-$MVN_VERSION --os linux --arch arm64
-#    - docker manifest push $IMAGE_NAME/backend:$MVN_VERSION
-
 docker-backend:
    image: docker:19.03.5
    stage: docker
@@ -199,20 +157,22 @@ docker-backend:
      - export MVN_VERSION=$(cat ./target/mvn_version)
      - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $REGISTRY_HOST
      # Build AMD64
-     - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_AMD
+     - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_AMD64
        -t $IMAGE_NAME/backend:amd64 -t $IMAGE_NAME/backend:amd64-$MVN_VERSION
        -f ./streampipes-backend/Dockerfile ./streampipes-backend
-     # Build ARMv7
+     # Build ARM32v7, ARM64v8
      # Download qemu static and make it executable so it can be used during the docker build phase
      - wget https://github.com/multiarch/qemu-user-static/releases/download/v4.0.0/qemu-arm-static -P ./streampipes-backend
+     - wget https://github.com/multiarch/qemu-user-static/releases/download/v4.0.0/qemu-aarch64-static -P ./streampipes-backend
      - chmod 554 ./streampipes-backend/qemu-arm-static
-     - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_ARM32v7
+     - chmod 554 ./streampipes-backend/qemu-aarch64-static
+     - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_ARM32v7 --build-arg QEMU=qemu-arm-static
        -t $IMAGE_NAME/backend:arm32v7 -t $IMAGE_NAME/backend:arm32v7-$MVN_VERSION
-       -f ./streampipes-backend/Dockerfile.arm ./streampipes-backend
-     - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_ARM64v8
+       -f ./streampipes-backend/arm.Dockerfile ./streampipes-backend
+     - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_ARM64v8 --build-arg QEMU=qemu-aarch64-static
        -t $IMAGE_NAME/backend:arm64v8 -t $IMAGE_NAME/backend:arm64v8-$MVN_VERSION
-       -f ./streampipes-backend/Dockerfile.arm ./streampipes-backend
-     # Push Docker images: AMD64, ARMv7, ARMv8
+       -f ./streampipes-backend/aarch64.Dockerfile ./streampipes-backend
+     # Push Docker images: AMD64, ARM32v7, ARM64v8
      - docker push $IMAGE_NAME/backend:amd64-$MVN_VERSION
      - docker push $IMAGE_NAME/backend:amd64
      - docker push $IMAGE_NAME/backend:arm32v7-$MVN_VERSION
@@ -227,47 +187,6 @@ docker-backend:
      - docker manifest annotate $IMAGE_NAME/backend:$MVN_VERSION $IMAGE_NAME/backend:arm32v7-$MVN_VERSION --os linux --arch arm
      - docker manifest annotate $IMAGE_NAME/backend:$MVN_VERSION $IMAGE_NAME/backend:arm64v8-$MVN_VERSION --os linux --arch arm64
      - docker manifest push $IMAGE_NAME/backend:$MVN_VERSION
-  #    # Build AMD64
-  #    - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_AMD
-  #      -t $IMAGE_NAME/backend:amd64 -t $IMAGE_NAME/backend:amd64-$MVN_VERSION
-  #      -t $HARBOR_IMAGE_NAME/backend:amd64 -t $HARBOR_IMAGE_NAME/backend:amd64-$MVN_VERSION
-  #      -f ./streampipes-backend/Dockerfile ./streampipes-backend
-  #    # Build ARMv7
-  #    # Download qemu static and make it executable so it can be used during the docker build phase
-  #    - wget https://github.com/multiarch/qemu-user-static/releases/download/v4.0.0/qemu-arm-static -P ./streampipes-backend
-  #    - chmod 554 ./streampipes-backend/qemu-arm-static
-  #    - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_ARM32v7
-  #      -t $IMAGE_NAME/backend:arm32v7 -t $IMAGE_NAME/backend:arm32v7-$MVN_VERSION
-  #      -t $HARBOR_IMAGE_NAME/backend:arm32v7 -t $HARBOR_IMAGE_NAME/backend:arm32v7-$MVN_VERSION
-  #      -f ./streampipes-backend/Dockerfile.arm ./streampipes-backend
-  #    - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_ARM64v8
-  #      -t $IMAGE_NAME/backend:arm64v8 -t $IMAGE_NAME/backend:arm64v8-$MVN_VERSION
-  #      -t $HARBOR_IMAGE_NAME/backend:arm64v8 -t $HARBOR_IMAGE_NAME/backend:arm64v8-$MVN_VERSION
-  #      -f ./streampipes-backend/Dockerfile.arm ./streampipes-backend
-  #    # Push Docker images
-  #    # Push AMD64
-  #    - docker push $IMAGE_NAME/backend:amd64-$MVN_VERSION
-  #    - docker push $IMAGE_NAME/backend:amd64
-  #    - docker push $HARBOR_IMAGE_NAME/backend:amd64-$MVN_VERSION
-  #    - docker push $HARBOR_IMAGE_NAME/backend:amd64
-  #    # Push ARMv7
-  #    - docker push $IMAGE_NAME/backend:arm32v7-$MVN_VERSION
-  #    - docker push $IMAGE_NAME/backend:arm32v7
-  #    - docker push $HARBOR_IMAGE_NAME/backend:arm32v7-$MVN_VERSION
-  #    - docker push $HARBOR_IMAGE_NAME/backend:arm32v7
-  #    # Push ARMv8
-  #    - docker push $IMAGE_NAME/backend:arm64v8-$MVN_VERSION
-  #    - docker push $IMAGE_NAME/backend:arm64v8
-  #    - docker push $HARBOR_IMAGE_NAME/backend:arm64v8-$MVN_VERSION
-  #    - docker push $HARBOR_IMAGE_NAME/backend:arm64v8
-  #    # Create Docker manifest
-  #    - docker manifest create $IMAGE_NAME/backend:$MVN_VERSION
-  #      $IMAGE_NAME/backend:amd64-$MVN_VERSION
-  #      $IMAGE_NAME/backend:arm32v7-$MVN_VERSION
-  #      $IMAGE_NAME/backend:arm64v8-$MVN_VERSION
-  #    - docker manifest annotate $IMAGE_NAME/backend:$MVN_VERSION $IMAGE_NAME/backend:arm32v7-$MVN_VERSION --os linux --arch arm
-  #    - docker manifest annotate $IMAGE_NAME/backend:$MVN_VERSION $IMAGE_NAME/backend:arm64v8-$MVN_VERSION --os linux --arch arm64
-  #    - docker manifest push $IMAGE_NAME/backend:$MVN_VERSION
    only:
      - dev
 
@@ -280,20 +199,22 @@ docker-connect-container:
      - export MVN_VERSION=$(cat ./target/mvn_version)
      - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $REGISTRY_HOST
      # Build AMD64
-     - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_AMD
+     - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_AMD64
        -t $IMAGE_NAME/streampipes-connect-container:amd64 -t $IMAGE_NAME/streampipes-connect-container:amd64-$MVN_VERSION
        -f ./streampipes-connect-container-master/Dockerfile ./streampipes-connect-container-master
-     # Build ARMv7
+     # Build ARM32v7,ARM64v8
      # Download qemu static and make it executable so it can be used during the docker build phase
      - wget https://github.com/multiarch/qemu-user-static/releases/download/v4.0.0/qemu-arm-static -P ./streampipes-connect-container-master
+     - wget https://github.com/multiarch/qemu-user-static/releases/download/v4.0.0/qemu-aarch64-static -P ./streampipes-connect-container-master
      - chmod 554 ./streampipes-connect-container-master/qemu-arm-static
-     - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_ARM32v7
+     - chmod 554 ./streampipes-connect-container-master/qemu-aarch64-static
+     - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_ARM32v7 --build-arg QEMU=qemu-arm-static
        -t $IMAGE_NAME/streampipes-connect-container:arm32v7 -t $IMAGE_NAME/streampipes-connect-container:arm32v7-$MVN_VERSION
-       -f ./streampipes-connect-container-master/Dockerfile.arm ./streampipes-connect-container-master
-     - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_ARM64v8
+       -f ./streampipes-connect-container-master/arm.Dockerfile ./streampipes-connect-container-master
+     - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_ARM64v8 --build-arg QEMU=qemu-aarch64-static
        -t $IMAGE_NAME/streampipes-connect-container:arm64v8 -t $IMAGE_NAME/streampipes-connect-container:arm64v8-$MVN_VERSION
-       -f ./streampipes-connect-container-master/Dockerfile.arm ./streampipes-connect-container-master
-     # Push Docker images: AMD64, ARMv7, ARMv8
+       -f ./streampipes-connect-container-master/aarch64.Dockerfile ./streampipes-connect-container-master
+     # Push Docker images: AMD64, ARM32v7, ARM64v8
      - docker push $IMAGE_NAME/streampipes-connect-container:amd64-$MVN_VERSION
      - docker push $IMAGE_NAME/streampipes-connect-container:amd64
      - docker push $IMAGE_NAME/streampipes-connect-container:arm32v7-$MVN_VERSION
@@ -308,47 +229,6 @@ docker-connect-container:
      - docker manifest annotate $IMAGE_NAME/streampipes-connect-container:$MVN_VERSION $IMAGE_NAME/streampipes-connect-container:arm32v7-$MVN_VERSION --os linux --arch arm
      - docker manifest annotate $IMAGE_NAME/streampipes-connect-container:$MVN_VERSION $IMAGE_NAME/streampipes-connect-container:arm64v8-$MVN_VERSION --os linux --arch arm64
      - docker manifest push $IMAGE_NAME/streampipes-connect-container:$MVN_VERSION
-  #    # Build AMD64
-  #    - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_AMD
-  #      -t $IMAGE_NAME/streampipes-connect-container:amd64 -t $IMAGE_NAME/streampipes-connect-container:amd64-$MVN_VERSION
-  #      -t $HARBOR_IMAGE_NAME/streampipes-connect-container:amd64 -t $HARBOR_IMAGE_NAME/streampipes-connect-container:amd64-$MVN_VERSION
-  #      -f ./streampipes-connect-container-master/Dockerfile ./streampipes-connect-container-master
-  #    # Build ARMv7
-  #    # Download qemu static and make it executable so it can be used during the docker build phase
-  #    - wget https://github.com/multiarch/qemu-user-static/releases/download/v4.0.0/qemu-arm-static -P ./streampipes-connect-container-master
-  #    - chmod 554 ./streampipes-connect-container-master/qemu-arm-static
-  #    - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_ARM32v7
-  #      -t $IMAGE_NAME/streampipes-connect-container:arm32v7 -t $IMAGE_NAME/streampipes-connect-container:arm32v7-$MVN_VERSION
-  #      -t $HARBOR_IMAGE_NAME/streampipes-connect-container:arm32v7 -t $HARBOR_IMAGE_NAME/streampipes-connect-container:arm32v7-$MVN_VERSION
-  #      -f ./streampipes-connect-container-master/Dockerfile.arm ./streampipes-connect-container-master
-  #    - docker build --pull --build-arg BASE_IMAGE=$BASE_IMAGE_ARM64v8
-  #      -t $IMAGE_NAME/streampipes-connect-container:arm64v8 -t $IMAGE_NAME/streampipes-connect-container:arm64v8-$MVN_VERSION
-  #      -t $HARBOR_IMAGE_NAME/streampipes-connect-container:arm64v8 -t $HARBOR_IMAGE_NAME/streampipes-connect-container:arm64v8-$MVN_VERSION
-  #      -f ./streampipes-connect-container-master/Dockerfile.arm ./streampipes-connect-container-master
-  #    # Push Docker images
-  #    # Push AMD64
-  #    - docker push $IMAGE_NAME/streampipes-connect-container:amd64-$MVN_VERSION
-  #    - docker push $IMAGE_NAME/streampipes-connect-container:amd64
-  #    - docker push $HARBOR_IMAGE_NAME/streampipes-connect-container:amd64-$MVN_VERSION
-  #    - docker push $HARBOR_IMAGE_NAME/streampipes-connect-container:amd64
-  #    # Push ARMv7
-  #    - docker push $IMAGE_NAME/streampipes-connect-container:arm32v7-$MVN_VERSION
-  #    - docker push $IMAGE_NAME/streampipes-connect-container:arm32v7
-  #    - docker push $HARBOR_IMAGE_NAME/streampipes-connect-container:arm32v7-$MVN_VERSION
-  #    - docker push $HARBOR_IMAGE_NAME/streampipes-connect-container:arm32v7
-  #    # Push ARMv8
-  #    - docker push $IMAGE_NAME/streampipes-connect-container:arm64v8-$MVN_VERSION
-  #    - docker push $IMAGE_NAME/streampipes-connect-container:arm64v8
-  #    - docker push $HARBOR_IMAGE_NAME/streampipes-connect-container:arm64v8-$MVN_VERSION
-  #    - docker push $HARBOR_IMAGE_NAME/streampipes-connect-container:arm64v8
-  #    # Create Docker manifest
-  #    - docker manifest create $IMAGE_NAME/streampipes-connect-container:$MVN_VERSION
-  #      $IMAGE_NAME/streampipes-connect-container:amd64-$MVN_VERSION
-  #      $IMAGE_NAME/streampipes-connect-container:arm32v7-$MVN_VERSION
-  #      $IMAGE_NAME/streampipes-connect-container:arm64v8-$MVN_VERSION
-  #    - docker manifest annotate $IMAGE_NAME/streampipes-connect-container:$MVN_VERSION $IMAGE_NAME/streampipes-connect-container:arm32v7-$MVN_VERSION --os linux --arch arm
-  #    - docker manifest annotate $IMAGE_NAME/streampipes-connect-container:$MVN_VERSION $IMAGE_NAME/streampipes-connect-container:arm64v8-$MVN_VERSION --os linux --arch arm64
-  #    - docker manifest push $IMAGE_NAME/streampipes-connect-container:$MVN_VERSION
    only:
      - dev
 
