--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,9 +98,9 @@ jobs:
           IMG_NAME_ARM64V8: ${{ env.DOCKERHUB_APACHE_REPO }}/ui:arm64v8-${{ env.MVN_VERSION }}
           DFILE_DIR: ui
         run: |
-          docker build --no-cache --pull --build-arg BASE_IMG=$BASE_IMG_JRE_DEFAULT -t $IMG_NAME_DEFAULT -t $IMG_NAME_AMD64 -f ./$DFILE_DIR/Dockerfile ./$DFILE_DIR
-          docker build --no-cache --pull --build-arg BASE_IMG=$BASE_IMG_JRE_ARM32V7 --build-arg QEMU=qemu-arm-static -t $IMG_NAME_ARM32V7 -f ./$DFILE_DIR/arm.Dockerfile ./$DFILE_DIR
-          docker build --no-cache --pull --build-arg BASE_IMG=$BASE_IMG_JRE_ARM64V8 --build-arg QEMU=qemu-aarch64-static -t $IMG_NAME_ARM64V8 -f ./$DFILE_DIR/aarch64.Dockerfile ./$DFILE_DIR
+          docker build --no-cache --pull --build-arg BASE_IMG=$BASE_IMG_NGINX_DEFAULT -t $IMG_NAME_DEFAULT -t $IMG_NAME_AMD64 -f ./$DFILE_DIR/Dockerfile ./$DFILE_DIR
+          docker build --no-cache --pull --build-arg BASE_IMG=$BASE_IMG_NGINX_ARM32V7 --build-arg QEMU=qemu-arm-static -t $IMG_NAME_ARM32V7 -f ./$DFILE_DIR/arm.Dockerfile ./$DFILE_DIR
+          docker build --no-cache --pull --build-arg BASE_IMG=$BASE_IMG_NGINX_ARM64V8 --build-arg QEMU=qemu-aarch64-static -t $IMG_NAME_ARM64V8 -f ./$DFILE_DIR/aarch64.Dockerfile ./$DFILE_DIR
           docker push $IMG_NAME_DEFAULT
           docker push $IMG_NAME_AMD64
           docker push $IMG_NAME_ARM32V7
