--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
           wget https://github.com/multiarch/qemu-user-static/releases/download/v4.0.0/qemu-arm-static
           wget https://github.com/multiarch/qemu-user-static/releases/download/v4.0.0/qemu-aarch64-static
           chmod 554 qemu-arm-static qemu-aarch64-static
-          echo "./streampipes-backend/ ./streampipes-connect-container-master/ ./ui" | xargs -n 1 cp -v qemu-*
+          echo "./streampipes-backend/ ./streampipes-connect-container-master/ ./ui/" | xargs -n 1 cp -v qemu-*
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USER }} --password-stdin
       - name: Build and Push Docker Backend Image
